# arxivbot

./: .gitignore  README.md  interests.json  pyproject.toml
src/arxivbot/: __main__.py  bot.py  utils.py
